<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="false"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_prev"
            android:onClick="anteriorPregunta"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_anterior" />

        <Button
            android:id="@+id/btn_next"
            android:onClick="siguientePregunta"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_siguiente" />
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/bckgro"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:baselineAligned="false"
        android:gravity="center"
        android:orientation="vertical">
        <TextView
            android:id="@+id/question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="24dp"
            android:textSize="@dimen/small"
            android:text="@string/string_welcomeClick" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_falso"
                android:onClick="falseMan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_false" />

            <Button
                android:id="@+id/btn_verdad"
                android:onClick="trueMan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_true" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>